# qutip-jax

./: .coveragerc  .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  VERSION  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml  build_documentation.yml  docs.yml  tests.yml  update_version.yml  weekly.yml
doc/: Makefile  conf.py  index.rst  requirements.txt
doc/development/: release.md
doc/source/: apidoc.rst  autodiff.rst  basics.rst  bibliography.rst  changelog.rst  conf.py  index.rst  installation.rst  introduction.rst  metrics.rst  solver.rst
src/qutip_jax/: __init__.py  binops.py  convert.py  create.py  family.py  jaxarray.py  jaxdia.py  linalg.py  measure.py  measurements.py  norm.py  notes.py  ode.py  permute.py  properties.py  qobjevo.py  qutip_trees.py  reshape.py  settings.py  unary.py
tests/: conftest.py  pytest.ini  test_binops.py  test_convert.py  test_create.py  test_creation.py  test_eigen.py  test_family.py  test_flatten.py  test_jaxarray.py  test_jaxdia.py  test_linalg.py  test_measurements.py  test_norm.py  test_ode.py  test_permute.py  test_properties.py  test_reshape.py  test_unary.py
tests/test_qutip/: test_entropy.py  test_mcsolve.py  test_metrics.py  test_qobj.py
tools/: report_failing_tests.py
