[metadata]
name = qutip-jax
url = https://qutip.org
description = JAX backend for QuTiP
long_description = file: README.md
long_description_content_type = text/markdown; variant=GFM
keywords = quantum, physics, dynamics, gpu, linear-algebra
license = BSD 3-Clause License
license_file = LICENSE.txt
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: Microsoft :: Windows
author = Alexander Pitchford, Nathan Shammah, Shahnawaz Ahmed, Neill Lambert, Eric Giguere, Boxi Li, Jake Lishman, Simon Cross
author_email = qutip-admin@googlegroups.com
platforms = Linux, Mac OSX, Unix, Windows

[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    qutip>=5.0.0.dev0
    jax
    diffrax
    equinox
setup_requires =
    packaging

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest>=6.0
full =
    %(tests)s
